# plain-vanilla-chatbot

./: .gitignore  README.md  app.py  create_vector_db.py  main.py  pyproject.toml
